# tensor-bench

./: .gitignore  Cargo.toml  README.md  basic.sh
benches/: bench_main.rs
benches/benchmarks/: mod.rs  ones.rs
src/: add.rs  basic.rs  lib.rs
src/stella_num/: README.md  mod.rs  samples.txt  stella.py  stella.sh
torch/: add.py  basic.py  utils.py
