[package]
name = "tensor-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0", features = ["cuda"] }
candle-core = { git = "https://github.com/anubhabb/candle.git", branch = "stella", features = ["cuda"] }
candle-nn = { git = "https://github.com/anubhabb/candle.git", branch = "stella", features = ["cuda"] }
candle-transformers = { git = "https://github.com/anubhabb/candle.git", branch = "stella", features = ["cuda"]}
criterion = "0"
safetensors = "0"
tokenizers = "0"
